fix(style): Remove scrollbars from few CSS examples

--- a/editor/css/editable-css.css
+++ b/editor/css/editable-css.css
@@ -274,6 +274,7 @@
 
   .live .example-choice pre {
     flex-grow: 1;
+    margin: 0;
   }
 
   .output section {
